k8s/darwinbox-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: darwinbox-back
  labels:
    app: darwinbox-back
spec:
  replicas: 3
  selector:
    matchLabels:
      app: darwinbox-back
  template:
    metadata:
      labels:
        app: darwinbox-back
    spec:
      containers:
      - name: darwinbox-back
        image: darwinbox-back
        imagePullPolicy: Never
        ports:
        - containerPort: 80
