k8s/darwinbox-back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: darwinbox-back-service
spec:
  selector:
    app: darwinbox-back
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
  sessionAffinity: ClientIP
