k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
  - host: "localhost"
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: darwinbox-back-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: darwinbox-front-service
            port:
              number: 80
